--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,5 +1,5 @@
 <ul>
-  <li *ngFor="let post of posts">
+  <li *ngFor="let post of posts" [routerLink]="post.id">
     {{post.title}}
     <button (click)="deletePost(post.id)" )>Delete</button>
   </li>
