--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,7 +1,10 @@
+
+<div>
+  <h1>Na ez már valami</h1>
+</div>
 <ul>
   <li *ngFor="let post of posts" [routerLink]="post.id">
     {{post.title}}
-    <button (click)="deletePost(post.id)" )>Delete</button>
+    <button (click)="deletePost(post.id)">Delete</button>
   </li>
-
 </ul>
