--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,6 +1,6 @@
 
 <div>
-  <h1>Na ez már valami</h1>
+  <h1>Post components</h1>
 </div>
 <ul>
   <li *ngFor="let post of posts" [routerLink]="post.id">
